dropshot/tests/fail/bad_server_endpoint5.stderr
error[E0277]: the trait bound `for<'de> QueryParams: serde::de::Deserialize<'de>` is not satisfied
  --> tests/fail/bad_server_endpoint5.rs:41:18
   |
41 |         _params: Query<QueryParams>,
   |                  ^^^^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `QueryParams`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `QueryParams` to implement `serde::de::DeserializeOwned`
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `Query`

error[E0277]: the trait bound `for<'de> QueryParams: serde::de::Deserialize<'de>` is not satisfied
  --> tests/fail/bad_server_endpoint5.rs:28:18
   |
28 |         _params: Query<QueryParams>,
   |                  ^^^^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `QueryParams`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `QueryParams` to implement `serde::de::DeserializeOwned`
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `Query`

error[E0277]: the trait bound `for<'de> QueryParams: serde::de::Deserialize<'de>` is not satisfied
  --> tests/fail/bad_server_endpoint5.rs:39:5
   |
39 | /     async fn bad_endpoint(
40 | |         _rqctx: RequestContext<()>,
41 | |         _params: Query<QueryParams>,
42 | |     ) -> Result<HttpResponseUpdatedNoContent, HttpError> {
   | |________________________________________________________^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `QueryParams`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `QueryParams` to implement `serde::de::DeserializeOwned`
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `Query`
